# netssh

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  ChangeVersion.md  README.md  README_ZH.md  compile.md  cypress.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.conf.ts  webdriverio.conf.ts
.ai/: agents.md  backlog.md  iteration-rules.md  product-vision.md
.ai/prompts/: autonomous-turn.md  evaluator.md  frontend-worker.md  planner.md  reviewer.md  rust-worker.md
.ai/reports/: 2026-06-08-1635.md  2026-06-08-1645-validation.md  2026-06-08-1645.md  2026-06-08-1718-validation.md  2026-06-08-1718.md  2026-06-08-1725-validation.md  2026-06-08-1725.md  2026-06-08-1728-identity-file-diagnostics.md  2026-06-08-1728-validation.md  2026-06-08-1730.md  2026-06-08-1736-favorites-recent.md  2026-06-08-1736-validation.md  2026-06-08-1738-validation.md  (+52 more)
.playwright-mcp/: page-2026-06-19T14-22-26-408Z.yml
docs/: NetSSH-Release-SOP-Quick-Guide.md  NetSSH-Release-Workflow-Postmortem-2026-06-09.html  NetSSH-Release-Workflow-Postmortem-2026-06-09.md  Netssh-Comprehensive-Test-Plan.md
releases/: .gitignore
scripts/: bump-version.ps1  click-audit.ps1  click-audit.ts  collect-release-artifacts.ps1  cypress-run.ps1  e2e-browser.ts  e2e-launch.ps1  e2e-quick.ps1  e2e-runner.ts  test-all.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_lifecycle.rs  commands.rs  credentials.rs  lib.rs  main.rs  pty.rs  serial.rs  ssh.rs  ssh_config.rs  storage.rs
src-tauri/tests/: integration.rs
(+96 files in other folders)
