[package]
name = "netssh"
version = "1.1.13"
description = "Modern SSH / infrastructure device manager"
authors = ["you"]
edition = "2021"

[lib]
name = "netssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Remote SSH — pure-Rust, no native deps
russh = "0.46"
russh-keys = "0.46"

# Local PTYs — ConPTY on Windows, pty on macOS and Linux
portable-pty = "0.8"

# Serial ports (for console serial backends)
serialport = "=4.9.0"

# SSH config parsing
ssh2-config = "0.6"

# Credentials — keyring backend: Windows Credential Manager, Keychain on macOS
keyring = "3.4"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "1"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
base64 = "0.22"
async-trait = "0.1"

# HMAC for hashed known_hosts entries
hmac = "0.12"
sha1 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Console",
  "Win32_System_Threading",
  "Globalization",
] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
